<resources>
    <string name="app_name">ITrustApplication</string>
    <string name="default_notification_channel_id">NotificationChannelId</string>
    <string name="first_slide_title">Menstrasyon</string>
    <string name="second_slide_title">Pagbubuntis</string>
    <string name="third_slide_title">Kontrasepsiyon</string>
    <string name="fourth_slide_title">Pakikipagtalik</string>
    <string name="fifth_slide">Pagtatalik</string>
    <string name="first_slide_desc_female">Are you experiencing delay of menstration?</string>
    <string name="second_slide_desc_female">Are you familiar to contraceptives like condom, pills and more?</string>
    <string name="third_slide_desc_female">Have you experienced sex?</string>
    <string name="fourth_slide_desc_female">Do you or are you willing to use contraceptives for sex?</string>
    <string name="fifth_slide_desc_female">Are you pregnant?</string>
    <string name="first_slide_desc_male">Have you experienced sex?</string>
    <string name="second_slide_desc_male">Do you or are you willing to use contraceptives for sex?</string>
    <string name="third_slide_desc_male">Do you have multiple times of sexual intercourse to a different partner?</string>
    <string name="fourth_slide_desc_male">Do you have a family member that diagnose with HIV?</string>
    <string name="fifth_slide_desc_male">Have you experienced swelling in your balls?</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="survey_again">Answer Again</string>
    <string name="admin_register_login">Already have an Account? <font fgcolor='#FF4F66D8'><b>Login</b></font> </string>
    <string name="hello_worldRed">daniel<![CDATA[<b><font color=#FF0000>Hello world!</font></b>]]></string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinnerPromptText">Click to choose</string>
    <string name="signUpText">Don\'t have an account? <b>Signup</b> </string>
    <string name="back_button">Back button</string>
    <string name="pending_request">Pending Request</string>
    <string name="approved_request">Approved Request</string>
    <string name="declined_request">Declined Request</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_sub_logo">Company Sub Logo</string>
    <string name="ang_otp_code_ay_na_i_send_na_sa">Hintayin ang OTP code ng aming team</string>
    <string name="hindi_kaba_nasendan_ng_otp">Hindi kaba nasendan ng otp?</string>
    <string name="magsend_ulit">Magsend Ulit</string>
    <string name="verify_code">Verify Code</string>
    <string name="magparehistro">Magparehistro</string>
    <string name="tuntunin_at_kundisyon">Terms and Condition</string>
    <string name="sumasang_ayon_ako_sa_mga">I agree to the</string>
    <string name="mag_login_para_makapagsimula_o_gumawa_n_ng_bagong_account_para_sa_app_na_ito">Enter your credential to start or create \n an account to get Started your journey here</string>
    <string name="password">Password</string>
    <string name="mag_login">Login</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="walang_pang_account">Don\'t have an account?</string>
    <string name="mag_signup">Signup</string>
    <string name="otp_verfication">OTP Verification</string>
    <string name="mag_sign_up_upang_masimulan_ang_n_iyong_bagong_paglalakbay">Enter your information \n to start your journey with us</string>
    <string name="gender">Gender</string>
    <string name="magsend_ng_request">Send a Request</string>
    <string name="oras_ng_konsulta">Time of Consultation</string>
    <string name="araw_ng_konsulta">Day of Consultation</string>
    <string name="kung_gusto_niyong_magpaschedule_sa_ating_health_expert_mangyare_lamang_po_na_fill_uppan_ang_nasa_baba_na_form_at_isubmit_ito">If you want to schedule for consultation to our health expert, please enter a valid inputs and submit it when your done.</string>
    <string name="magpaschedule_ng_konsulta">Schedule for Consultation</string>
    <string name="tungkol_sa_applikasyon">About Us</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_inventore_reprehenderit_dicta_quam_eos_corrupti_sapiente_quidem_doloremque_ipsa_eius_similique_a_sed_voluptatibus_rem_numquam_aperiam_distinctio_laborum_quas_molestiae_lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_inventore_reprehenderit_dicta_quam_eos_corrupti_sapiente_quidem_doloremque">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit dicta quam eos corrupti sapiente quidem, doloremque ipsa eius similique a sed voluptatibus rem numquam aperiam distinctio laborum quas molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit dicta quam eos corrupti sapiente quidem, doloremque.</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_inventore_reprehenderit_dicta_quam_eos_corrupti_sapiente_quidem_doloremque_ipsa_eius_similique_a_sed_voluptatibus_rem_numquam_aperiam_distinctio_laborum_quas_molestiae_lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_inventore_reprehenderit_dicta_quam_eos_corrupti_sapiente_quidem_doloremque_ipsa_eius_similique_a_sed_voluptatibus_rem_numquam_aperiam_distinctio_laborum_quas_molestiae">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit dicta quam eos corrupti sapiente quidem, doloremque ipsa eius similique a sed voluptatibus rem numquam aperiam distinctio laborum quas molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit dicta quam eos corrupti sapiente quidem, doloremque ipsa eius similique a sed voluptatibus rem numquam aperiam distinctio laborum quas molestiae.</string>
    <string name="purok">Purok</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tulong">Help</string>
    <string name="mag_logout">Logout</string>
    <string name="konsulta">Consult</string>
    <string name="tungkol_sa_aplikasyon">About Us</string>
    <string name="profile">Profile</string>
    <string name="user_profile">Residence Profile</string>
    <string name="daniel_v_rey">Daniel V. Rey</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit">EDIT</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="purok_street">Purok/Street</string>
    <string name="_0987_654_3210">0987–654–3210</string>
    <string name="male">Male</string>
    <string name="iv">IV</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="unang_madalas_itanong">How to chat to Midwife?</string>
    <string name="itrust_app_help_center">ITrust App Help Center</string>
    <string name="username">Username</string>
    <string name="barangay_passcode">Barangay Passcode</string>
    <string name="mag_rehistro">Register</string>
    <string name="ang_page_na_ito_ay_ekslosibo_lamang_para_sa_rhu_tanging_taong_pinahihintulutan_lamang_ang_maaaring_makapasok">This page is for RHU of barangay alawihao only, no regular users are allowed in here. Only authorize personnel are allowed to logged in</string>
    <string name="may_account_na">Already have an Account?</string>
    <string name="unavailable_time">Not Available</string>
    <string name="itrust_app">ITrust App</string>
    <string name="plus">url</string>
    <string name="add">+</string>
    <string name="yes">Yes</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="update_information">Update Information</string>
    <string name="mag_enter_ng_tamang_impormasyon_at_isubmit_kung_tapos_na">Please enter a valid info and submit when its done.</string>
    <string name="i_update_ang_impormasyon">Update Information</string>
    <string name="bot">Bot Icon</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="magpalit_ng_password">Change Password</string>
    <string name="passcode">Passcode</string>
    <string name="logout">Logout</string>
    <string name="admins">Admins</string>
    <string name="chatbot_history">Residence</string>
    <string name="status_request">Consultation Status</string>
    <string name="consultation_schedule">Consultation Schedule</string>
    <string name="registered_user">Registered Users</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="kapag_naglogout_ka_mapupunta_ka_sa_admin_login_form">If you logged out you will be redirected to Admin login form.</string>
    <string name="yes_logged_me_out">Logout</string>
    <string name="no">Keep me logged in</string>
    <string name="no_prompt">No</string>
    <string name="view_description">Approve</string>
    <string name="daniel_rey">Daniel Rey</string>
    <string name="no_data_found">No data found</string>
    <string name="_3_pm_declined">3:00 pm</string>
    <string name="wednesday_september_6_2022">Thursday, September 6, 2022</string>
    <string name="remove">Remove</string>
    <string name="enter_new_user">Enter New Users Name</string>
    <string name="add_user">Register User</string>
    <string name="monday_time">Monday (ex.8:30am - 4:00pm)</string>
    <string name="tuesday_time">Tuesday</string>
    <string name="wednesday_time">Wednesday</string>
    <string name="chat">Chats</string>
    <string name="activity_log">Activity Log</string>
    <string name="video_recommendation">Video Recommendation</string>
    <string name="medicine_inventory">Medicine Inventory</string>
    <string name="others">Others</string>
    <string name="specify">(Specify)</string>
    <string name="normal">normal</string>
    <string name="extremities">EXTREMITIES</string>
    <string name="edema">edema</string>
    <string name="varicosities">varicosities</string>
    <string name="mass">mass</string>
    <string name="warts">warts</string>
    <string name="breast">BREAST</string>
    <string name="nipple_discharge">nipple discharge</string>
    <string name="abdomen">ABDOMEN</string>
    <string name="abdominal_mass">abdominal mass</string>
    <string name="cervical_tenderness">cervical tenderness</string>
    <string name="adnexal_mass_tenderness">adnexal mass / tenderness</string>
    <string name="uterine_position">uterine position</string>
    <string name="mid">mid</string>
    <string name="anteflexed">anteflexed</string>
    <string name="retroflexed">retroflexed</string>
    <string name="uterine_depth">uterine depth:</string>
    <string name="cm">cm</string>
    <string name="forms">Forms</string>
    <string name="thorax">THORAX</string>
    <string name="abnormal_heart_sound_cardiac_rate">Abnormal heart sound/cardiac rate</string>
    <string name="abnormal_breath_sound_respiratory_rate">Abnormal breath sound/respiratory rate</string>
    <string name="enlarge_liver">Enlarge Liver</string>
    <string name="tenderness">Tenderness</string>
    <string name="vaginal_examination">VAGINAL EXAMINATION</string>
    <string name="bleeding">Bleeding</string>
    <string name="cysts_mass">Cysts/mass</string>
    <string name="discharges">Discharges</string>
    <string name="scars">Scars</string>
    <string name="lacerations">Lacerations</string>
    <string name="pain_on_forced_dorsiflexion">Pain on forced dorsiflexion</string>
    <string name="tt_status">TT STATUS</string>
    <string name="impression_diagnosis">IMPRESSION/DIAGNOSIS</string>
    <string name="lmp">LMP</string>
    <string name="g">G</string>
    <string name="p">P</string>
    <string name="t_p_a_l">(T__P__A__L__)</string>
</resources>