<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textColor="@color/black_100"
        android:text="@string/breast"
        android:id="@+id/breast_label_pe_fp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="@+id/breast_label_pe_fp"
        app:layout_constraintTop_toBottomOf="@+id/breast_label_pe_fp"
        android:text="@string/normal"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/normal_breast_pe_fp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="@+id/normal_breast_pe_fp"
        app:layout_constraintTop_toBottomOf="@+id/normal_breast_pe_fp"
        android:text="@string/mass"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/mass_breast_pe_fp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="@+id/mass_breast_pe_fp"
        app:layout_constraintTop_toBottomOf="@+id/mass_breast_pe_fp"
        android:text="@string/nipple_discharge"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/nipple_discharge_breast_pe_fp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textColor="@color/black_100"
        android:text="@string/abdomen"
        android:id="@+id/abdomen_label_pe_fp"
        app:layout_constraintStart_toStartOf="@+id/breast_label_pe_fp"
        app:layout_constraintTop_toBottomOf="@+id/nipple_discharge_breast_pe_fp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="@+id/abdomen_label_pe_fp"
        app:layout_constraintTop_toBottomOf="@+id/abdomen_label_pe_fp"
        android:text="@string/normal"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/normal_abdomen_pe_fp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="@+id/normal_abdomen_pe_fp"
        app:layout_constraintTop_toBottomOf="@+id/normal_abdomen_pe_fp"
        android:text="@string/abdominal_mass"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/abdominal_mass_abdomen_pe_fp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="@+id/abdominal_mass_abdomen_pe_fp"
        app:layout_constraintTop_toBottomOf="@+id/abdominal_mass_abdomen_pe_fp"
        android:text="@string/varicosities"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/varicosities_andominal_pe_fp"/>

</androidx.constraintlayout.widget.ConstraintLayout>